--- a/excursion/index.html
+++ b/excursion/index.html
@@ -5,7 +5,21 @@
 <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-<h1>A</h1>
-<p>C</p>
+  <h1>Discover hidden places in the world around</h1>
+  <p>
+    <a href="#" target="_blank">Download Excursion (Coming soon!)</a>
+  </p>
+  <video autoplay muted loop>
+    <source src="resources/videos/excursion.mp4" type="video/mp4">
+  </video>
+  <h2>Your personal travel guide</h2>
+  <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
+  <p><img src="resources/images/camp.jpg"></p>
+  <p><img src="resources/images/phone.png"></p>
+  <h2>Coming Soon for iPhone and Android</h2>
+  <p>
+    <a href="#" target="_blank">Download Excursion (Coming soon!)</a>
+  </p>
+  <div class="footer"><p>&copy; Excursion</p></div>
 </body>
 </html>
